# KiCAD-MCP-Server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  extract_handlers.py  package-lock.json  package.json  pyproject.toml  requirements.txt
config/: default-config.json
docs/: ARCHITECTURE.md  FREEROUTING_GUIDE.md  INDEX.md  IPC_BACKEND_STATUS.md  KNOWN_ISSUES.md  PCB_DESIGN_WORKFLOW.md  ROADMAP.md  ROUTER_ARCHITECTURE.md  ROUTER_QUICK_START.md  SCHEMATIC_TOOLS_REFERENCE.md  SWIG_TO_IPC_MIGRATION.md  TOOL_INVENTORY.md
python/: board_persistence.py  kicad_interface.py
scripts/: _e2e-driver.mjs  download_jlcpcb.py  full_mcp_integration_test.py  generate_tool_annotations.py  ipc_smoke_test.py  kicad-flatpak-python.sh  mcp_test_client.mjs  measure-tool-tokens.mjs  run-py.mjs  swig_smoke_test.py  test-router.js  wait_for_ipc.mjs
src/: config.ts  index.ts  logger.ts  package-info.ts  python-discovery.ts  server.ts
tests/: conftest.py  test_add_board_text_mirror.py  test_add_component_footprint_inheritance.py  test_add_component_properties.py  test_add_copper_pour_ipc.py  test_add_gnd_stitching_vias.py  test_add_label_empty_schematic.py  test_add_mounting_hole.py  test_add_mounting_hole_routing.py  test_add_net_label_collision.py  test_add_net_labels_batch.py  test_add_schematic_component.py  test_add_schematic_text.py  test_align_components_spacing.py  test_annotate_schematic_noop.py  test_auto_open_board.py  test_auto_save_guard.py  test_autolaunch_ipc_poll.py  test_autoplace.py  test_autoplace_mechanical.py  test_autoroute_best_of_n.py  test_autoroute_score.py  (+181 more)
(+220 files in other folders)
